update header & subheader font size

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <!-- Static fallback OG meta -->
     <meta property="og:title" content="Couple Name" />
     <meta property="og:description" content="Together with our families, we hope you can join us to celebrate." />
-    <meta property="og:image" content="https://github.com/leng2112/wedding_template/blob/main/images/images10.jpeg" />
+    <meta property="og:image" content="https://github.com/leng2112/wedding_template/blob/main/images/og%3Bimage.png" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://leng2112.github.io/wedding_template/" />
 
