--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <!-- Static fallback OG meta -->
     <meta property="og:title" content="Couple Name" />
     <meta property="og:description" content="Together with our families, we hope you can join us to celebrate." />
-    <meta property="og:image" content="https://github.com/leng2112/wedding_template/blob/main/images/og%3Bimage.png" />
+    <meta property="og:image" content="https://cdn.jsdelivr.net/gh/leng2112.github.io/wedding_template@main/images/og-image.png
+" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta property="og:image:type" content="image/png" />
