update header & subheader font size

--- a/index.html
+++ b/index.html
@@ -13,11 +13,11 @@
     <meta property="og:image:type" content="image/png" />
 
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://leng2112.github.io/wedding_template/" />
+    <meta property="og:url" content="https://leabnhawedding.com/" />
 
     <title>Wedding Invitation</title>
     <!-- Bootstrap CSS first -->
-    <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel=" stylesheet" href="css/bootstrap.min.css">
     <!-- Your custom CSS after -->
     <link rel="stylesheet" href="css/styles.css">
     <!-- Fonts & Icons -->
