--- a/siengly.html
+++ b/siengly.html
@@ -8,7 +8,7 @@
   <meta property="og:description" content="សាក់ ប្រុសលាប និង ប៊ុនថុន កញ្ញា">
   <meta property="og:image" content="https://leabnhawedding.com/images/og-image.png">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://leabnhawedding.com/invite/siengly.html">
+  <meta property="og:url" content="https://leabnhawedding.com/siengly.html">
   <title>Wedding Invitation</title>
   <!-- Bootstrap CSS first -->
   <link rel=" stylesheet" href="css/bootstrap.min.css">
