--- a/index.html
+++ b/index.html
@@ -4,16 +4,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=420, user-scalable=no">
-    <!-- Static fallback OG meta -->
-    <meta property="og:title" content="Couple Name" />
-    <meta property="og:description" content="Together with our families, we hope you can join us to celebrate." />
-    <meta property="og:image" content="https://leabnhawedding.com/images/og-image.png" />
-    <meta property="og:image:width" content="1200" />
-    <meta property="og:image:height" content="630" />
-    <meta property="og:image:type" content="image/png" />
-
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://leabnhawedding.com/" />
+    <title>សូមគោរពអញ្ចើញ ភ្ញៀវកិត្តិយស</title>
+    <meta property="og:title" content="ចូលរួមជាភ្ញៀវចូលរួមជាអធិបតីភាព កម្មវិធីមង្គលអាពាហ៍ពិពាហ៍ 💍">
+    <meta property="og:description" content="សាក់ ប្រុសលាប និង ប៊ុនថុន កញ្ញា">
+    <meta property="og:image" content="https://leabnhawedding.com/images/og-image.png">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://leabnhawedding.com/">
 
     <title>Wedding Invitation</title>
     <!-- Bootstrap CSS first -->
