--- a/siengly.html
+++ b/siengly.html
@@ -4,8 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <title>សូមគោរពអញ្ចើញ កញ្ញា ឡាច សៀងលី</title>
-  <meta property="og:title" content="ចូលរួមជាភ្ញៀវចូលរួមជាអធិបតីភាព កម្មវិធីមង្គលអាពាហ៍ពិពាហ៍ 💍">
-  <meta property="og:description" content="សាក់ ប្រុសលាប និង ប៊ុនថុន កញ្ញា">
+  <meta property="og:title" content="សូមគោរពអញ្ចើញ កញ្ញា ឡាច សៀងលី">
+  <meta property="og:description" content="ចូលរួមជាភ្ញៀវចូលរួមជាអធិបតីភាព កម្មវិធីមង្គលអាពាហ៍ពិពាហ៍ 💍">
   <meta property="og:image" content="https://leabnhawedding.com/images/og-image.png">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://leabnhawedding.com/siengly.html">
