update header & subheader font size

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=420, user-scalable=no">
     <title>សូមគោរពអញ្ចើញ ភ្ញៀវកិត្តិយស</title>
-    <meta property="og:title" content="ចូលរួមជាភ្ញៀវចូលរួមជាអធិបតីភាព កម្មវិធីមង្គលអាពាហ៍ពិពាហ៍ 💍">
+    <meta property="og:title"
+        content="សូមគោរពអញ្ចើញ ភ្ញៀវកិត្តិយស ចូលរួមជាភ្ញៀវចូលរួមជាអធិបតីភាព កម្មវិធីមង្គលអាពាហ៍ពិពាហ៍ 💍">
     <meta property="og:description" content="សាក់ ប្រុសលាប និង ប៊ុនថុន កញ្ញា">
     <meta property="og:image" content="https://leabnhawedding.com/images/og-image.png">
     <meta property="og:type" content="website">
