update header & subheader font size

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=420, user-scalable=no">
-    <title>សូមគោរពអញ្ចើញ ភ្ញៀវកិត្តិយស</title>
+    <title>leabnhawedding</title>
     <meta property="og:title"
         content="សូមគោរពអញ្ចើញ ភ្ញៀវកិត្តិយស ចូលរួមជាភ្ញៀវចូលរួមជាអធិបតីភាព កម្មវិធីមង្គលអាពាហ៍ពិពាហ៍ 💍">
     <meta property="og:description" content="សាក់ ប្រុសលាប និង ប៊ុនថុន កញ្ញា">
@@ -12,7 +12,6 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://leabnhawedding.com/">
 
-    <title>Wedding Invitation</title>
     <!-- Bootstrap CSS first -->
     <link rel=" stylesheet" href="css/bootstrap.min.css">
     <!-- Your custom CSS after -->
