--- a/invite/somphors.html
+++ b/invite/somphors.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
-  <title>Mary, you’re invited!</title>
-  <meta property="og:title" content="Mary, you’re invited to Leab & Nha's Wedding 💍">
+  <title>សូមគោរពអញ្ជើញ,Somphors</title>
+  <meta property="og:title" content="សិរីមង្គលអាពាណ៍ពិពាហ៍, សូមគោរពអញ្ជើញ : Somphors, ">
   <meta property="og:description" content="Save the date & celebrate with us!">
   <meta property="og:image" content="https://leabnhawedding.com/images/og-image.png">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://leabnhawedding.com/invite/mary.html">
-  <title>Wedding Invitation</title>
+  <meta property="og:url" content="https://leabnhawedding.com/invite/somphors.html">
+
   <!-- Bootstrap CSS first -->
   <link rel="stylesheet" href="../css/bootstrap.min.css">
   <!-- Your custom CSS after -->
