--- a/invite/john.html
+++ b/invite/john.html
@@ -6,14 +6,14 @@
   <title>John, you’re invited!</title>
   <meta property="og:title" content="John, you’re invited to Leab & Nha's Wedding 💍">
   <meta property="og:description" content="Save the date & celebrate with us!">
-  <meta property="og:image" content="https://leabnhawedding.com/images/og-image.png">
+  <meta property="og:image" content="https://leabnhawedding.com/../images/og-image.png">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://leabnhawedding.com/invite/john.html">
   <title>Wedding Invitation</title>
   <!-- Bootstrap CSS first -->
-  <link rel=" stylesheet" href="css/bootstrap.min.css">
+  <link rel="stylesheet" href="../css/bootstrap.min.css">
   <!-- Your custom CSS after -->
-  <link rel="stylesheet" href="css/styles.css">
+  <link rel="stylesheet" href="../css/styles.css">
   <!-- Fonts & Icons -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -28,10 +28,10 @@
 <body>
   <!-- Background Audio -->
   <audio id="backgroundAudio" autoplay loop muted>
-    <source src="wedding_background_instrument.mp3" />
+    <source src="../wedding_background_instrument.mp3" />
   </audio>
   <!-- Background Image ---->
-  <img src="images/bg2.jpg" alt="background"
+  <img src="../images/bg2.jpg" alt="background"
     class="position-fixed top-0 start-0 w-100 h-100 object-fit-cover  d-lg-block"
     style="z-index: -100; background-size: cover;">
 
@@ -39,13 +39,13 @@
   <header id="first-page">
     <div id="start-button" class="d-flex justify-content-center align-items-end w-100 position-relative"
       style="height: 100vh; z-index: 10;">
-      <img src="images/bg_page1.jpeg" alt="background" class="position-fixed top-0 start-50 translate-middle-x"
+      <img src="../images/bg_page1.jpeg" alt="background" class="position-fixed top-0 start-50 translate-middle-x"
         style="width:420px; height:100vh; object-fit:cover; z-index:-100;">
       <!-- Logo -->
       <div>
         <div class="position-absolute bottom-0 start-50 translate-middle-x w-100  w-50 w-md-75 w-lg-100"
           style="margin-bottom: 8rem;">
-          <img alt="logo" loading="lazy" decoding="async" src="images/logo_v1-05.png" class="img-fluid">
+          <img alt="logo" loading="lazy" decoding="async" src="../images/logo_v1-05.png" class="img-fluid">
         </div>
         <svg class="hand" viewBox="0 0 256 256">
           <g style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: none; fill-rule: nonzero; opacity: 1;"
@@ -68,11 +68,9 @@
     style="display: none; opacity: 0; background: rgba(0,0,0,0.8); top:0; left:0; ">
     <video id="popup-video" playsinline webkit-playsinline muted preload="auto"
       style="max-width:100%; max-height:100%;">
-      <source src="images/open_clip.mp4" type="video/mp4">
+      <source src="../images/open_clip.mp4" type="video/mp4">
     </video>
   </div>
-
-
   <button id="audioToggle" class="d-flex align-items-center justify-content-center rounded-circle btn-audio"
     data-bs-toggle="tooltip" data-bs-placement="left">
     <span id="audioIcon">
@@ -92,7 +90,7 @@
             <p class="fw-semibold fs-4 mb-5">សិរីមង្គលអាពាហ៍ពិពាហ៍</p>
             <!-- Logo -->
             <div class="z-3 mt-3">
-              <img alt="logo" loading="lazy" width="204" height="278" decoding="async" src="images/logo.svg"
+              <img alt="logo" loading="lazy" width="204" height="278" decoding="async" src="../images/logo.svg"
                 class="img-fluid">
             </div>
             <!-- Groom & Bride Names -->
@@ -136,24 +134,24 @@
             </div>
           </div>
       </section>
-      <section id="gallery1st" class="position-relative slide-in-left">
+      <section id="gallery1st" class="position-relative">
         <div class="d-flex flex-column w-100 min-h-screen-s">
-          <div class="images px-4 mt-5 mb-5 mx-auto w-100 h-100" style="max-width: 640px;" margin-top: 100px;>
+          <div class="../images px-4 mt-5 mb-5 mx-auto w-100 h-100" style="max-width: 640px;" margin-top: 100px;>
             <!-- First Row: Single Large Image -->
             <div class="rows">
-              <img src="images/images1.jpeg" alt="Gallery Image 1" class="large-image"
+              <img src="../images/images1.jpeg" alt="Gallery Image 1" class="large-image"
                 onclick="openLightbox('gallery1st', 0)" loading="lazy" />
             </div>
-            <!-- Second Row: Two Smaller Images -->
+            <!-- Second Row: Two Smaller ../Images -->
             <div class="rows">
-              <img src="images/images2.jpeg" alt="Gallery Image 2" class="small-image"
+              <img src="../images/images2.jpeg" alt="Gallery Image 2" class="small-image"
                 onclick="openLightbox('gallery1st', 1)" loading="lazy" />
-              <img src="images/images3.jpeg" alt="Gallery Image 3" class="small-image"
+              <img src="../images/images3.jpeg" alt="Gallery Image 3" class="small-image"
                 onclick="openLightbox('gallery1st', 2)" loading="lazy" />
             </div>
             <!-- Third Row: Single Large Image -->
             <div class="rows">
-              <img src="images/images4.jpeg" alt="Gallery Image 4" class="large-image"
+              <img src="../images/images4.jpeg" alt="Gallery Image 4" class="large-image"
                 onclick="openLightbox('gallery1st', 3)" loading="lazy" />
             </div>
           </div>
@@ -197,7 +195,7 @@
             <div class="position-relative fw-semibold mt-4 pop-up-on-scroll">
               <!-- Logo -->
               <div class="text-center">
-                <img src="images/logo_v2.svg" class="img-fluid mx-auto" style="max-width: 10rem;" loading="lazy"
+                <img src="../images/logo_v2.svg" class="img-fluid mx-auto" style="max-width: 10rem;" loading="lazy"
                   alt="Wedding Logo">
               </div>
               <!-- Groom & Bride Names -->
@@ -351,42 +349,42 @@
           </div>
         </div>
       </section>
-      <section id="gallery2nd" class="position-relative slide-in-right">
+      <section id="gallery2nd" class="position-relative">
         <div class="d-flex flex-column w-100 h-100">
-          <div class="images px-4 mt-5 mb-5 mx-auto w-100 h-100" style="max-width: 640px;" margin-top: 100px;>
-            <div class="images">
+          <div class="../images px-4 mt-5 mb-5 mx-auto w-100 h-100" style="max-width: 640px;" margin-top: 100px;>
+            <div class="../images">
               <!-- Image Gallery -->
               <!-- First Row: Single Large Image -->
               <div class="rows">
-                <img src="images/images5.jpeg" alt="Gallery Image 5" class="large-image"
+                <img src="../images/images5.jpeg" alt="Gallery Image 5" class="large-image"
                   onclick="openLightbox('gallery2nd', 0)" loading="lazy" />
               </div>
-              <!-- Second Row: Two Smaller Images -->
+              <!-- Second Row: Two Smaller ../Images -->
               <div class="rows">
-                <img src="images/images6.jpeg" alt="Gallery Image 6" class="small-image"
+                <img src="../images/images6.jpeg" alt="Gallery Image 6" class="small-image"
                   onclick="openLightbox('gallery2nd', 1)" loading="lazy" />
-                <img src="images/images7.jpeg" alt="Gallery Image 7" class="small-image"
+                <img src="../images/images7.jpeg" alt="Gallery Image 7" class="small-image"
                   onclick="openLightbox('gallery2nd', 2)" loading="lazy" />
               </div>
               <!-- Third Row: Single Large Image -->
               <div class="rows">
-                <img src="images/images8.jpeg" alt="Gallery Image 8" class="large-image"
+                <img src="../images/images8.jpeg" alt="Gallery Image 8" class="large-image"
                   onclick="openLightbox('gallery2nd', 3)" loading="lazy" />
               </div>
               <div class="rows">
-                <img src="images/images9.jpeg" alt="Gallery Image 5" class="large-image"
+                <img src="../images/images9.jpeg" alt="Gallery Image 5" class="large-image"
                   onclick="openLightbox('gallery2nd', 4)" loading="lazy" />
               </div>
-              <!-- Second Row: Two Smaller Images -->
+              <!-- Second Row: Two Smaller ../Images -->
               <div class="rows">
-                <img src="images/images10.jpeg" alt="Gallery Image 6" class="small-image"
+                <img src="../images/images10.jpeg" alt="Gallery Image 6" class="small-image"
                   onclick="openLightbox('gallery2nd', 5)" loading="lazy" />
-                <img src="images/images11.jpeg" alt="Gallery Image 7" class="small-image"
+                <img src="../images/images11.jpeg" alt="Gallery Image 7" class="small-image"
                   onclick="openLightbox('gallery2nd', 6)" loading="lazy" />
               </div>
               <!-- Third Row: Single Large Image -->
               <div class="rows">
-                <img src="images/images12.jpeg" alt="Gallery Image 8" class="large-image"
+                <img src="../images/images12.jpeg" alt="Gallery Image 8" class="large-image"
                   onclick="openLightbox('gallery2nd', 7)" loading="lazy" />
               </div>
             </div>
@@ -415,7 +413,7 @@
             </div>
             <!-- Map Image -->
             <div class="mt-3 w-100 text-center slide-in-left">
-              <img loading="lazy" src="images/map.svg" alt="Map" class="img-fluid"
+              <img loading="lazy" src="../images/map.svg" alt="Map" class="img-fluid"
                 style="max-width: 330px;; object-fit: contain;">
             </div>
             <!-- Map button -->
@@ -471,8 +469,8 @@
           <div
             class="d-flex flex-column justify-content-center align-items-center mt-5 vh-100 text-center text-warning fw-light">
             <!-- Logo -->
-            <img src=" images/invitely_logo-01.svg" width="200" height="200" alt="invitely logo" class="img-fluid mb-4"
-              loading="lazy" decoding="async">
+            <img src=" ../images/invitely_logo-01.svg" width="200" height="200" alt="invitely logo"
+              class="img-fluid mb-4" loading="lazy" decoding="async">
             <!-- Text -->
             <p class="px-3 px-md-5" style="color: #333366;">
               តើលោកអ្នកចាប់អារម្មណ៍នឹងប្រើប្រាស់សេវាកម្មរបស់ពួកយើងសម្រាប់កម្មវិធីរបស់លោកអ្នកដែរឬទេ?
@@ -517,6 +515,6 @@
     </div>
   </main>
 </body>
+<script src="../script.js"></script>
 
 </html>
-<script src="script.js"></script>
