--- a/invite/john.html
+++ b/invite/john.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=375, initial-scale=1.0, user-scalable=no">
   <title>John, you’re invited!</title>
   <meta property="og:title" content="John, you’re invited to Leab & Nha's Wedding 💍">
   <meta property="og:description" content="Save the date & celebrate with us!">
