--- a/invite/somphors.html
+++ b/invite/somphors.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=375, initial-scale=1.0, user-scalable=no">
   <title>សូមគោរពអញ្ជើញ,Somphors</title>
   <meta property="og:title" content="សិរីមង្គលអាពាណ៍ពិពាហ៍, សូមគោរពអញ្ជើញ : Somphors, ">
   <meta property="og:description" content="Save the date & celebrate with us!">
