update og:iamge from png to jpeg, add width & height

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
     <meta property="og:title"
         content="សូមគោរពអញ្ចើញ ភ្ញៀវកិត្តិយស ចូលរួមជាភ្ញៀវចូលរួមជាអធិបតីភាព កម្មវិធីមង្គលអាពាហ៍ពិពាហ៍ 💍">
     <meta property="og:description" content="សាក់ ប្រុសលាប និង ប៊ុនថុន កញ្ញា">
-    <meta property="og:image" content="https://leabnhawedding.com/images/og-image.png">
+    <meta property="og:image" content="https://leabnhawedding.com/images/og-image.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://leabnhawedding.com/">
 
