--- a/invite/john.html
+++ b/invite/john.html
@@ -7,7 +7,7 @@
   <title>John, you’re invited!</title>
   <meta property="og:title" content="John, you’re invited to Leab & Nha's Wedding 💍">
   <meta property="og:description" content="Save the date & celebrate with us!">
-  <meta property="og:image" content="https://leabnhawedding.com/../images/og-image.png">
+  <meta property="og:image" content="https://leabnhawedding.com/../images/og-image.jpg">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://leabnhawedding.com/invite/john.html">
   <title>Wedding Invitation</title>
