--- a/invite/somphors.html
+++ b/invite/somphors.html
@@ -7,7 +7,7 @@
   <title>សូមគោរពអញ្ជើញ,Somphors</title>
   <meta property="og:title" content="សិរីមង្គលអាពាណ៍ពិពាហ៍, សូមគោរពអញ្ជើញ : Somphors, ">
   <meta property="og:description" content="Save the date & celebrate with us!">
-  <meta property="og:image" content="https://leabnhawedding.com/images/og-image.png">
+  <meta property="og:image" content="https://leabnhawedding.com/images/og-image.jpg">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://leabnhawedding.com/invite/somphors.html">
 
