--- a/invite/sophia.html
+++ b/invite/sophia.html
@@ -7,10 +7,9 @@
   <title>Sophia, you’re invited!</title>
   <meta property="og:title" content="Sophia, you’re invited to Leab & Nha's Wedding 💍">
   <meta property="og:description" content="Save the date & celebrate with us!">
-  <meta property="og:image" content="https://leabnhawedding.com/images/og-image.png">
+  <meta property="og:image" content="https://leabnhawedding.com/images/og-image.jpg">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://leabnhawedding.com/invite/sophia.html">
-  <title>Wedding Invitation</title>
 
   <!-- Bootstrap CSS first -->
   <link rel="stylesheet" href="../css/bootstrap.min.css">
