--- a/invite/siengly.html
+++ b/invite/siengly.html
@@ -9,7 +9,7 @@
   <meta property="og:description" content="Save the date & celebrate with us!">
   <meta property="og:image" content="https://leabnhawedding.com/images/og-image.png">
   <meta property="og:type" content="website">
-  <meta property="og:url" content="https://leabnhawedding.com/invite/siengly.html">
+  <meta property="og:url" content="https://leabnhawedding.com/invite/og-image.jpg">
 
   <!-- Bootstrap CSS first -->
   <link rel="stylesheet" href="../css/bootstrap.min.css">
