--- a/invite/meng.html
+++ b/invite/meng.html
@@ -7,7 +7,7 @@
   <title>សូមគោរពអញ្ជើញ,Meng</title>
   <meta property="og:title" content="សិរីមង្គលអាពាណ៍ពិពាហ៍, សូមគោរពអញ្ជើញ : Meng, ">
   <meta property="og:description" content="Save the date & celebrate with us!">
-  <meta property="og:image" content="https://leabnhawedding.com/images/og-image.jpg">
+  <meta property="og:image" content="https://leabnhawedding.com/images/og-image_wedding_preview.jpg">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://leabnhawedding.com/invite/meng.html">
 
