update og:iamge from png to jpeg, add width & height

--- a/invite/sophia.html
+++ b/invite/sophia.html
@@ -5,11 +5,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=375, initial-scale=1.0, user-scalable=no">
   <title>Sophia, you’re invited!</title>
+
+  <!-- Open Graph -->
   <meta property="og:title" content="Sophia, you’re invited to Leab & Nha's Wedding 💍">
   <meta property="og:description" content="Save the date & celebrate with us!">
   <meta property="og:image" content="https://leabnhawedding.com/images/og-image_wedding_preview.jpg">
+  <meta property="og:image:width" content="1200">
+  <meta property="og:image:height" content="630">
+  <meta property="og:image:alt" content="Leab & Nha Wedding Invitation">
   <meta property="og:type" content="website">
   <meta property="og:url" content="https://leabnhawedding.com/invite/sophia.html">
+
+  <!-- Twitter Card (Messenger sometimes uses this too) -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:image" content="https://leabnhawedding.com/images/og-image_wedding_preview.jpg">
+  <meta name="twitter:title" content="Sophia, you’re invited to Leab & Nha's Wedding 💍">
+  <meta name="twitter:description" content="Save the date & celebrate with us!">
+
+  <!-- (Optional) Facebook App ID -->
+  <!-- <meta property="fb:app_id" content="YOUR_APP_ID"> -->
 
   <!-- Bootstrap CSS first -->
   <link rel="stylesheet" href="../css/bootstrap.min.css">
@@ -21,10 +35,12 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Kantumruy+Pro:ital,wght@0,100..700;1,100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+Khmer:wght@100..900&family=Noto+Serif+Khmer:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
     rel="stylesheet">
+
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
     crossorigin="anonymous"></script>
 </head>
+
 
 <body>
   <!-- Background Audio -->
