--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title"
         content="សូមគោរពអញ្ចើញ ភ្ញៀវកិត្តិយស ចូលរួមជាភ្ញៀវចូលរួមជាអធិបតីភាព កម្មវិធីមង្គលអាពាហ៍ពិពាហ៍ 💍">
     <meta property="og:description" content="សាក់ ប្រុសលាប និង ប៊ុនថុន កញ្ញា">
-    <meta property="og:image" content="https://leabnhawedding.com/images/og-image_wedding_preview.jpg">
+    <meta property="og:image" content="https://shorturl.at/Dv1RO">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:alt" content="Leab & Nha Wedding Invitation">
