update og:iamge from png to jpeg, add width & height

--- a/invite/mary.html
+++ b/invite/mary.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=375, initial-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mary, you’re invited!</title>
   <meta property="og:title" content="Mary, you’re invited to Leab & Nha's Wedding 💍">
   <meta property="og:description" content="Save the date & celebrate with us!">
@@ -41,7 +41,7 @@
     <div id="start-button" class="d-flex justify-content-center align-items-end w-100 position-relative"
       style="height: 100vh; z-index: 10;">
       <img src="../images/bg_page1.jpeg" alt="background" class="position-fixed top-0 start-50 translate-middle-x"
-        style="width:420px; height:100vh; object-fit:cover; z-index:-100;">
+        style="height:100vh; object-fit:cover; z-index:-100;">
       <!-- Logo -->
       <div>
         <div class="position-absolute bottom-0 start-50 translate-middle-x w-100  w-50 w-md-75 w-lg-100"
