--- a/invite/sophia.html
+++ b/invite/sophia.html
@@ -57,7 +57,7 @@
     <div id="start-button" class="d-flex justify-content-center align-items-end w-100 position-relative"
       style="height: 100vh; z-index: 10;">
       <img src="../images/bg_page1.jpeg" alt="background" class="position-fixed top-0 start-50 translate-middle-x"
-        style="width:420px; height:100vh; object-fit:cover; z-index:-100;">
+        style="height:100vh; object-fit:cover; z-index:-100;">
       <!-- Logo -->
       <div>
         <div class="position-absolute bottom-0 start-50 translate-middle-x w-100  w-50 w-md-75 w-lg-100"
