--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta property="og:title"
         content="សូមគោរពអញ្ចើញ ភ្ញៀវកិត្តិយស ចូលរួមជាភ្ញៀវចូលរួមជាអធិបតីភាព កម្មវិធីមង្គលអាពាហ៍ពិពាហ៍ 💍">
     <meta property="og:description" content="សាក់ ប្រុសលាប និង ប៊ុនថុន កញ្ញា">
-    <meta property="og:image" content="https://shorturl.at/Dv1RO">
+    <meta property="og:image" content="https://leabnhawedding.com/images/og-image_wedding_preview.webp">
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
     <meta property="og:image:alt" content="Leab & Nha Wedding Invitation">
@@ -16,19 +16,15 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://leabnhawedding.com/">
 
-    <!-- Bootstrap CSS first -->
-    <link rel=" stylesheet" href="css/bootstrap.min.css">
-    <!-- Your custom CSS after -->
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/styles.css">
-    <!-- Fonts & Icons -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
         href="https://fonts.googleapis.com/css2?family=Kantumruy+Pro:ital,wght@0,100..700;1,100..700&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Noto+Sans+Khmer:wght@100..900&family=Noto+Serif+Khmer:wght@100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
+    <link rel="preload" as="image" href="/images/logo-v1.webp" type="image/webp">
+
 </head>
 
 <body>
@@ -37,7 +33,7 @@
         <source src="wedding_background_instrument.mp3" />
     </audio>
     <!-- Background Image ---->
-    <img src="images/bg2.jpg" alt="background"
+    <img src="images/bg2.webp" alt="background"
         class="position-fixed top-0 start-0 w-100 h-100 object-fit-cover  d-lg-block"
         style="z-index: -100; background-size: cover;">
 
@@ -45,13 +41,12 @@
     <header id="first-page">
         <div id="start-button" class="d-flex justify-content-center align-items-end w-100 position-relative"
             style="height: 100vh; z-index: 10;">
-            <img src="images/bg_page1.jpeg" alt="background" class="position-fixed top-0 start-50 translate-middle-x"
+            <img src="images/bg_page1.webp" alt="background" class="position-fixed top-0 start-50 translate-middle-x"
                 style="height:100vh; object-fit:cover; z-index:-100;">
             <!-- Logo -->
             <div>
-                <div class="position-absolute bottom-0 start-50 translate-middle-x w-100  w-50 w-md-75 w-lg-100"
-                    style="margin-bottom: 8rem;">
-                    <img alt="logo" loading="lazy" decoding="async" src="images/logo_v1-05.png" class="img-fluid">
+                <div class="position-absolute bottom-0 start-50 translate-middle-x w-100" style="margin-bottom: 8rem;">
+                    <img alt="logo" src="images/logo-v1.webp" class="img-fluid">
                 </div>
                 <svg class="hand" viewBox="0 0 256 256">
                     <g style="stroke: none; stroke-width: 0; stroke-dasharray: none; stroke-linecap: butt; stroke-linejoin: miter; stroke-miterlimit: 10; fill: none; fill-rule: nonzero; opacity: 1;"
@@ -69,7 +64,8 @@
             </p>
         </div>
     </header>
-    <!-- Popup Page -->
+
+    <!-- Popup Video -->
     <div id="popup-page" class="justify-content-center align-items-center position-fixed w-100 h-100"
         style="display: none; opacity: 0; background: rgba(0,0,0,0.8); top:0; left:0; ">
         <video id="popup-video" playsinline webkit-playsinline muted preload="auto"
@@ -78,9 +74,8 @@
         </video>
     </div>
 
-
     <button id="audioToggle" class="d-flex align-items-center justify-content-center rounded-circle btn-audio"
-        data-bs-toggle="tooltip" data-bs-placement="left">
+        data-bs-toggle="tooltip" data-bs-placement="left" title="Toggle audio">
         <span id="audioIcon">
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 640 512" fill="333366" class="p-1" width="32"
                 height="32">
@@ -89,6 +84,7 @@
             </svg>
         </span>
     </button>
+
     <main id="scrollable-page" class="position-relative min-vh-100 text-box" style="display: none; opacity: 0;">
         <div class="d-flex flex-column w-100 min-vh-100 ">
             <section id="home" class="position-relative">
@@ -144,34 +140,21 @@
                         </div>
                     </div>
             </section>
-            <section id="gallery1st" class="position-relative slide-in-left">
-                <div class="d-flex flex-column w-100 min-h-screen-s">
-                    <div class="images px-4 mt-5 mb-5 mx-auto w-100 h-100" style="max-width: 640px;" margin-top: 100px;>
-                        <!-- First Row: Single Large Image -->
-                        <div class="rows">
-                            <img src="images/images1.jpeg" alt="Gallery Image 1" class="large-image"
-                                onclick="openLightbox('gallery1st', 0)" loading="lazy" />
-                        </div>
-                        <!-- Second Row: Two Smaller Images -->
-                        <div class="rows">
-                            <img src="images/images2.jpeg" alt="Gallery Image 2" class="small-image"
-                                onclick="openLightbox('gallery1st', 1)" loading="lazy" />
-                            <img src="images/images3.jpeg" alt="Gallery Image 3" class="small-image"
-                                onclick="openLightbox('gallery1st', 2)" loading="lazy" />
-                        </div>
-                        <!-- Third Row: Single Large Image -->
-                        <div class="rows">
-                            <img src="images/images4.jpeg" alt="Gallery Image 4" class="large-image"
-                                onclick="openLightbox('gallery1st', 3)" loading="lazy" />
-                        </div>
+            <section id="gallery1st" class="images">
+                <div class="gallery">
+                    <div class="rows">
+                        <img src="images/images1.webp" alt="Gallery Image 1" class="large-image"
+                            onclick="openLightbox(0)" loading="lazy">
                     </div>
-                    <div class="lightbox hidden" onclick="closeLightbox(event)">
-                        <div class="lightbox-content">
-                            <img class="lightbox-image" src="" alt="Enlarged Image" />
-
-                            <button class="prev-btn" onclick="changeImage('gallery1st', -1)">&#10094;</button>
-                            <button class="next-btn" onclick="changeImage('gallery1st', 1)">&#10095;</button>
-                        </div>
+                    <div class="rows">
+                        <img src="images/images2.webp" alt="Gallery Image 2" class="small-image"
+                            onclick="openLightbox(1)">
+                        <img src="images/images3.webp" alt="Gallery Image 3" class="small-image"
+                            onclick="openLightbox(2)" loading="lazy">
+                    </div>
+                    <div class="rows">
+                        <img src="images/images4.webp" alt="Gallery Image 4" class="large-image"
+                            onclick="openLightbox(3)" loading="lazy">
                     </div>
                 </div>
             </section>
@@ -361,54 +344,24 @@
                     </div>
                 </div>
             </section>
-            <section id="gallery2nd" class="position-relative slide-in-right">
-                <div class="d-flex flex-column w-100 h-100">
-                    <div class="images px-4 mt-5 mb-5 mx-auto w-100 h-100" style="max-width: 640px;" margin-top: 100px;>
-                        <div class="images">
-                            <!-- Image Gallery -->
-                            <!-- First Row: Single Large Image -->
-                            <div class="rows">
-                                <img src="images/images5.jpeg" alt="Gallery Image 5" class="large-image"
-                                    onclick="openLightbox('gallery2nd', 0)" loading="lazy" />
-                            </div>
-                            <!-- Second Row: Two Smaller Images -->
-                            <div class="rows">
-                                <img src="images/images6.jpeg" alt="Gallery Image 6" class="small-image"
-                                    onclick="openLightbox('gallery2nd', 1)" loading="lazy" />
-                                <img src="images/images7.jpeg" alt="Gallery Image 7" class="small-image"
-                                    onclick="openLightbox('gallery2nd', 2)" loading="lazy" />
-                            </div>
-                            <!-- Third Row: Single Large Image -->
-                            <div class="rows">
-                                <img src="images/images8.jpeg" alt="Gallery Image 8" class="large-image"
-                                    onclick="openLightbox('gallery2nd', 3)" loading="lazy" />
-                            </div>
-                            <div class="rows">
-                                <img src="images/images9.jpeg" alt="Gallery Image 5" class="large-image"
-                                    onclick="openLightbox('gallery2nd', 4)" loading="lazy" />
-                            </div>
-                            <!-- Second Row: Two Smaller Images -->
-                            <div class="rows">
-                                <img src="images/images10.jpeg" alt="Gallery Image 6" class="small-image"
-                                    onclick="openLightbox('gallery2nd', 5)" loading="lazy" />
-                                <img src="images/images11.jpeg" alt="Gallery Image 7" class="small-image"
-                                    onclick="openLightbox('gallery2nd', 6)" loading="lazy" />
-                            </div>
-                            <!-- Third Row: Single Large Image -->
-                            <div class="rows">
-                                <img src="images/images12.jpeg" alt="Gallery Image 8" class="large-image"
-                                    onclick="openLightbox('gallery2nd', 7)" loading="lazy" />
-                            </div>
-                        </div>
-                        <div class="lightbox hidden" onclick="closeLightbox(event)">
-                            <div class="lightbox-content">
-                                <img class="lightbox-image" src="" alt="Enlarged Image" />
-                                <button class="prev-btn" onclick="changeImage('gallery2nd', -1)">&#10094;</button>
-                                <button class="next-btn" onclick="changeImage('gallery2nd', 1)">&#10095;</button>
-                            </div>
-                        </div>
+            <section id="gallery2nd" class="images position-relative">
+                <div class="gallery">
+                    <div class="rows">
+                        <img src="images/images5.webp" alt="Gallery Image 1" class="large-image"
+                            onclick="openLightbox(4)" loading="lazy">
+                    </div>
+                    <div class="rows">
+                        <img src="images/images6.webp" alt="Gallery Image 2" class="small-image"
+                            onclick="openLightbox(5)" loading="lazy">
+                        <img src="images/images7.webp" alt="Gallery Image 3" class="small-image"
+                            onclick="openLightbox(6)" loading="lazy">
+                    </div>
+                    <div class="rows">
+                        <img src="images/images8.webp" alt="Gallery Image 4" class="large-image"
+                            onclick="openLightbox(7)" loading="lazy">
                     </div>
                 </div>
+            </section>
             </section>
             <section id="location" class="position-relative">
                 <div class="d-flex flex-column w-100 h-100">
@@ -452,6 +405,24 @@
                                 បើកផែនទី
                             </span>
                         </a>
+                    </div>
+                </div>
+            </section>
+            <section id="gallery3rd" class="images position-relative">
+                <div class="gallery">
+                    <div class="rows">
+                        <img src="images/images9.webp" alt="Gallery Image 1" class="large-image"
+                            onclick="openLightbox(8)" loading="lazy">
+                    </div>
+                    <div class="rows">
+                        <img src="images/images10.webp" alt="Gallery Image 2" class="small-image"
+                            onclick="openLightbox(9)" loading="lazy">
+                        <img src="images/images11.webp" alt="Gallery Image 3" class="small-image"
+                            onclick="openLightbox(10)" loading="lazy">
+                    </div>
+                    <div class="rows">
+                        <img src="images/images12.webp" alt="Gallery Image 4" class="large-image"
+                            onclick="openLightbox(11)" loading="lazy">
                     </div>
                 </div>
             </section>
@@ -531,7 +502,20 @@
             </section>
         </div>
     </main>
+
+    <div id="lightbox" class="lightbox hidden">
+        <span class="close-btn" onclick="closeLightbox()">&times;</span>
+        <button class="prev-btn" onclick="changeImage(-1)">&#10094;</button>
+        <button class="next-btn" onclick="changeImage(1)">&#10095;</button>
+        <img src="" alt="Enlarged Image" id="lightbox-image">
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+
+    <script src="script.js"></script>
 </body>
 
+
 </html>
-<script src="script.js"></script>
