update og:iamge from png to jpeg, add width & height

--- a/invite/siengly.html
+++ b/invite/siengly.html
@@ -1,15 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-  <meta charset="UTF-8">
-  <title>សូមគោរពអញ្ជើញ,Siengly</title>
-  <meta property="og:title" content="សិរីមង្គលអាពាណ៍ពិពាហ៍, សូមគោរពអញ្ជើញ : Siengly, ">
-  <meta property="og:description" content="Save the date & celebrate with us!">
-  <meta property="og:image" content="https://leabnhawedding.com/../images/og-image_wedding_preview.webp">
-  <meta property="og:image:width" content="1200">
-  <meta property="og:image:height" content="630">
-  <meta property="og:type" content="website">
-  <meta property="og:url" content="https://leabnhawedding.com/invite/siengly.html">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>សូមគោរពអញ្ជើញ,Siengly</title>
+    <meta property="og:title" content="សិរីមង្គលអាពាណ៍ពិពាហ៍, សូមគោរពអញ្ជើញ : Siengly, ">
+    <meta property="og:description" content="Save the date & celebrate with us!">
+    <meta property="og:image" content="https://leabnhawedding.com/../images/og-image_wedding_preview.webp">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://leabnhawedding.com/invite/siengly.html">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://leabnhawedding.com/">
